--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,70 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.main {
+  height: 100vh;
+  display: grid;
+  place-items: center;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.form {
+  border: solid 1px rgb(214, 214, 214);
+  padding: 1rem;
+  border-radius: 0.25rem;
+  width: 20rem;
+}
+
+.input-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.input-container:not(:last-child) {
+  margin-bottom: 0.75rem;
+}
+
+.input-container label {
+  margin-bottom: 0.25rem;
+  font-size: 1rem;
+}
+
+.input-container input {
+  border: solid 1px rgb(214, 214, 214);
+  border-radius: 0.25rem;
+  padding: 0.75rem;
+}
+
+.btn-submit {
+  display: block;
+  width: 100%;
+  padding: 0.75rem;
+  border: none;
+  background-color: rgb(30, 78, 141);
+  border-radius: 0.25rem;
+  color: #fff;
+  cursor: pointer;
+  transition: 0.2s;
+}
+
+.btn-submit:hover {
+  filter: brightness(0.9);
+}
+
+.btn-submit:active {
+  filter: brightness(0.85);
+}
+
+.error {
+  padding: 0.75rem;
+  background-color: rgb(230, 126, 126);
+  color: rgb(119, 25, 25);
+  border: solid 1px rgb(146, 35, 35);
+  border-radius: 0.25rem;
+  margin-bottom: 0.5rem;
+}
+
+.header {
+  text-align: center;
+}
+
+.footer span {
+  color: rgb(115, 47, 170);
+  text-decoration: underline;
 }
